--- a/style.css
+++ b/style.css
@@ -1,10 +1,51 @@
 *{
     box-sizing: border-box;
+    font-family: Roboto;
+    line-height: normal;
+    font-style: normal;
 }
 
 body{
     margin: 0;
     padding: 0;
+}
+
+.page-wrapper{
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+.container{
+    width: 100%;
+    height: 100%;
+    max-width: 1230px;
+    margin: 0px auto;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+.btn{
+    display: flex;
+    padding: 8px 16px;
+    align-items: center;
+    gap: 4px;
+    outline: none;
+}
+
+.btn-primary{
+    background: #1890FF;
+    border-radius: 2px;
+    border: 1px solid #1890FF;
+    color: #fff;
+}
+
+.btn-outline{
+    color: #595959;
+    border-radius: 2px;
+    border: 1px solid #D9D9D9;
+    background: #fff;
+    box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.00);
 }
 
 .logo{
@@ -16,29 +57,41 @@ body{
 }
 
 .header{
-    height: 124px;
-    border: 1px solid red;
+    display: flex;
+    align-items: center;
+    min-height: 124px;
 }
 
 .header-box{
-    border: 1px solid black;
     height: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
-.main{
+.header-controls{
+    gap: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+}
 
+.main{
+    flex-grow: 1;
+    background: linear-gradient(18deg, rgba(245, 245, 245, 0.00) 1.04%, #F5F5F5 100%);
 }
 
 .footer{
-    height: 156px;
-    border: 1px solid red;
+    padding-top: 60px;
+    padding-bottom: 60px;
+    min-height: 156px;
+    display: flex;
+    align-items: center;
 }
 
 .footer-box{
-    border: 1px solid black;
+    flex-wrap: wrap;
+    gap: 36px  ;
     height: 100%;
     display: flex;
     align-items: center;
@@ -49,10 +102,104 @@ body{
     flex-grow: 1;
 }
 
-.container{
-    height: 100%;
-    max-width: 1230px;
-    margin: 0px auto;
-    padding-left: 15px;
-    padding-right: 15px;
+.footer-nav ul{
+    flex-wrap: wrap;
+    display: flex;
+    align-items: center;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    gap: 15px;
+}
+
+.footer-nav ul li{
+    color: #595959;
+    font-size: 18px;
+    font-weight: 400;
+}
+
+.footer-social{
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    gap: 20px;
+}
+
+.banner{
+    margin-bottom: 56px;
+}
+
+.banner-item{
+    background-image: url(imgs/banners/Group\ 6.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center right;
+    padding: 68px;
+    border-radius: 10px;
+}
+
+.banner-item--title{
+    color: #302c34;
+    font-size: 39px;
+    font-weight: 700;
+    max-width: 50%;
+    margin-top: 0;
+    margin-bottom: 15px;
+}
+
+.banner-item--subtitle{
+    max-width: 50%;
+    color: #302c34;
+    font-size: 24px;
+    font-weight: 400;
+    margin: 0;
+}
+
+.products{
+
+}
+
+.products-header{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.products-header--title{
+    font-weight: 700;
+    font-size: 36px;
+
+}
+
+.products-header--search{
+    min-width: 306px;
+    height: 34px;
+    padding: 5px 12px;
+    border-radius: 2px;
+    border: 1px solid #D9D9D9;
+    background: #fff;
+}
+
+.products-header--search:focus{
+    outline: none;
+    border: 1px solid #D9D9D9;
+}
+
+.products-header--search::placeholder{
+    color: #BFBFBF;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+}
+
+
+
+@media (max-width: 991px) {
+    .banner-item--title{
+        max-width: 100%;
+    }
+
+    .banner-item--subtitle{
+        max-width: 100%;
+    }
 }
